Add Twitch stream event listener (#798)